rgw: use explicit index pool placement

Fixes: http://tracker.ceph.com/issues/22928

If explicit placement is set, it overrides placement_target.

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>